2012-04-26  Mark Wielaard  <mjw@redhat.com>

	* dwarf2dbg.c (DWARF2_ARANGES_VERSION): New define to 2.
	(DWARF2_LINE_VERSION): Likewise.
	(out_debug_line): Use DWARF2_LINE_VERSION not DWARF2_VERSION.
	(out_debug_aranges): Use DWARF2_ARANGES_VERSION not DWARF2_VERSION.
	(out_debug_abbrev): Use DW_FORM_data for DW_AT_high_pc when
	DWARF2_VERSION >= 4.
	(out_debug_info): Use difference between start and end as data
	value for DW_AT_high_pc when DWARF2_VERSION >= 4.
	* config/tc-ia64.h (DWARF2_LINE_VERSION): Override it.

2012-04-27  David S. Miller  <davem@davemloft.net>

	* doc/c-sparc.text: Document %l34 and %h34.

	* config/tc-sparc.c (v9a_asr_table): Add 'cfr'.

	* config/tc-sparc.c (sparc_arch_table): Add HWCAP_PAUSE to sparc4,
	v8pluse, v8plusv, v9e, and v9v.
	(v9a_asr_table): Add 'pause'.

	* config/tc-sparc.c (sparc_arch_table): Add HWCAP_CBCOND to
	sparc4, v8pluse, v8plusv, v9e, and v9v.
	(sparc_ip): Handle R_SPARC_5 of immediate constants inline in
	order to accomodate cbcond which otherwise would require two
	relocations to be handled in a single instruction..

	* config/tc-sparc.c (sparc_ip): Likewise.  Accept instruction
	names containing "_".
	(sparc_arch_table): Add sparc4, v8pluse, and v9e.  Add crypto
	hwcap masks to v8plusv and v9v.

	* config/tc-sparc.c (sparc_arch_table): Rework to use HWCAP_*
	masks.
	(sparc_md_end): No longer need to translate hwcap_seen values into
	ELF hwcap bits, they now match exactly.
	(get_hwcap_name): Use HWCAP_* and handle new values.
	(sparc_ip): Fetch hwcaps from insn->hwcaps instead of insn->flags.

2012-04-20  Tristan Gingold  <gingold@adacore.com>

	* config/tc-ia64.c (obj_elf_vms_common): New function.
	(md_pseudo_table): Add .vms_common pseudo.
	* config/obj-elf.h (obj_elf_section_name): Add a prototype.
	* config/obj-elf.c (obj_elf_section_name): Make it public.

2012-04-17  Richard Sandiford  <r.sandiford@uk.ibm.com>

	* config/tc-avr.c (md_apply_fix): Fix handling of BFD_RELOC32.
